Crash using the Elastic Deform brush and Compressibility #69737

Closed
opened 2019-09-11 01:38:05 +02:00 by TheRedWaxPolice · 7 comments

System Information
Win 10

Blender Version
Broken: blender-2.81-8f55794c0e80-windows64

Short description of error
Crash using the Elastic Deform brush and Compressibility at 1

Exact steps for others to reproduce the error

  • Launch blender
  • Choose the Sculpting template by going to file -> New -> Sculpting
  • Choose the Elastic Deform brush
  • In the brush settings set the Compressibilty value to 1
  • Click on the model (The model will disappear. Is that expected?)
  • Switch to Material Preview (former lookdev) or the Rendered View

Crash

2019-09-11_00-33-43.gif

An alternative way to crash is: After step 5, if you switch to object mode and then go back to sculpt mode it will crash.
I also found that it only crashes with meshes with around 9k polys and above. Lower than that it works.

**System Information** Win 10 **Blender Version** Broken: blender-2.81-8f55794c0e80-windows64 **Short description of error** Crash using the Elastic Deform brush and Compressibility at 1 **Exact steps for others to reproduce the error** - Launch blender - Choose the Sculpting template by going to file -> New -> Sculpting - Choose the Elastic Deform brush - In the brush settings set the Compressibilty value to 1 - Click on the model (The model will disappear. Is that expected?) - Switch to Material Preview (former lookdev) or the Rendered View # Crash ![2019-09-11_00-33-43.gif](https://archive.blender.org/developer/F7732773/2019-09-11_00-33-43.gif) An alternative way to crash is: After step 5, if you switch to object mode and then go back to sculpt mode it will crash. I also found that it only crashes with meshes with around 9k polys and above. Lower than that it works.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Added subscribers: @PabloDobarro, @capnm

Added subscribers: @PabloDobarro, @capnm

@PabloDobarro I can confirm that. Setting compressibility ~ 1 is hardly usable and = 1 corrupts the mesh.

@PabloDobarro I can confirm that. Setting compressibility ~ 1 is hardly usable and = 1 corrupts the mesh.
Pablo Dobarro was assigned by Brecht Van Lommel 2019-09-11 09:41:53 +02:00

Added subscriber: @Regnas

Added subscriber: @Regnas

I'm confuse. This is already fixed?
It's still crashing here in the latest build.

I'm confuse. This is already fixed? It's still crashing here in the latest build.

This issue was referenced by 70a9347705

This issue was referenced by 70a934770521b538b98b8a3e27739ae6a643ebfa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69737
No description provided.