Fix T69737: Crash using the Elastic Deform brush and Compressibility

Also renamed "compressibility" to "volume preservation"

Reviewed By: brecht

Maniphest Tasks: T69737

Differential Revision: https://developer.blender.org/D5757